# sols.bet

./: .env.example  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  supabase-schema.sql  tailwind.config.ts  transfer-authority.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
contract/: airdrop.rs  bet_and_settle.rs  lib.rs
contract/old/: batch-settle.rs
contract/src/: Cargo.toml  lib.rs
contract/tests/: MULTISIG_SETUP.md  decode-transaction.ts  run-tests.ts  test-0-setup-wallets.ts  test-1-vault-operations.ts  test-11-real-transactions.ts  test-2-house-setup.ts  test-3-game-operations.ts  test-4-pause-unpause.ts  update-vault-balances.ts
public/: android-chrome-192x192.avif  android-chrome-512x512.avif  apple-touch-icon.avif  avatar.avif  banner.avif  casino.avif  deposit-vault.avif  favicon-16x16.avif  favicon-32x32.avif  golden-terminal.avif  golden-vault.avif  logo.avif  slot-machine.avif  solana-logo.avif
src/: constants.ts
src/components/: index.ts
src/hooks/: useBankrollValue.ts  useGameSessions.ts  useGemCollection.ts  useLeaderboard.ts  useLiveWins.ts  usePrice.ts  useRealtimeBalance.ts  useRecentPlays.ts  useSmartVault.ts  useTokenBalance.ts  useTransactions.ts  useUser.ts  useUserAchievements.ts  useUserBets.ts  useUserSignup.ts  useWalletBalance.ts  useWalletTokenBalances.ts
src/lib/: emfileGuard.ts  gameMappings.ts  hmacUtils.ts  redis.ts  referralUtils.ts  requestLogger.ts  supabase.ts  (+1 more)
worker/: .env.example  Dockerfile  api.js  fly.toml  instrument.mjs  package-lock.json  package.json  worker.js
(+72 files in other folders)
